--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10668,3 +10668,24 @@ a.text-dark:focus {
   color: #6c757d;
 }
 
+.card .table th {
+  background-color: #ebeced;
+  border-bottom: 0;
+  padding: 0.85rem 1.25rem;
+}
+
+.card .table td {
+  border-top: 1px solid #ebe8f8;
+  padding: 0.85rem 1.25rem;
+}
+
+.card .table tr:not(:hover) td {
+  background-color: #fff;
+}
+
+.card .table td.table-fit,
+.card .table th.table-fit {
+  width: 1%;
+  white-space: nowrap;
+}
+
