--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -20,3 +20,23 @@
 .nav-pills a {
 	color: $gray-600;
 }
+
+.card .table th {
+    background-color: #ebeced;
+    border-bottom: 0;
+    padding: .85rem 1.25rem;
+}
+
+.card .table td {
+    border-top: 1px solid #ebe8f8;
+    padding: .85rem 1.25rem;
+}
+
+.card .table tr:not(:hover) td {
+    background-color: #fff;
+}
+
+.card .table td.table-fit, .card .table th.table-fit {
+    width: 1%;
+    white-space: nowrap;
+}
